v2: Update Jenkinsfile to remove MaxPermSize for Java 21